--- a/paint/style.css
+++ b/paint/style.css
@@ -5,6 +5,16 @@ html, body {
   padding: 0;
 }
 
+html, body, main{
+  height: 100%;
+}
+
+main{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 canvas {
   display: block;
 }
