--- a/paint/style.css
+++ b/paint/style.css
@@ -9,10 +9,14 @@ html, body, main{
   height: 100%;
 }
 
-main{
-  display: flex;
+.wrap{
+   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+#color{
+  margin-bottom: 20px;
 }
 
 canvas {
